2009-10-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* comint.el (comint-read-input-ring, comint-write-input-ring)
	(comint-substitute-in-file-name)
	(comint-dynamic-complete-as-filename)
	(comint-dynamic-simple-complete)
	(comint-dynamic-list-filename-completions)
	(comint-dynamic-list-completions)
	(comint-redirect-results-list-from-process): Minor simplifications.

2009-10-21  Kevin Ryde  <user42@zip.com.au>

	* emacs-lisp/checkdoc.el (checkdoc-file-comments-engine):
	When inserting ";;; Code" put it before any ";;;###autoload" cookie on
	the first form.  And insert a blank line after ";;; Code" since
	that's usual style.  (My Bug#4612.)

	* net/dns.el: Add "Keywords: comm", as per net/net-utils.el.

2009-10-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-table-with-terminator): Properly implement
	boundaries, in case `terminator' appears in the suffix.
	(completion--embedded-envvar-table): Don't return boundaries if
	there's no valid completion.  Simplify.
	(completion-file-name-table): New completion table extracted from
	completion--file-name-table.
	(completion--file-name-table): Use it.
	(read-file-name-predicate): Declare obsolete.
	(read-file-name): Use the pred arg i.s.o read-file-name-predicate.
	* vc-bzr.el (vc-bzr-revision-completion-table): Use the new
	completion-file-name-table, and use the `pred' argument.
	* files.el (locate-file-completion-table): Use the `pred' arg rather
	than read-file-name-predicate.
	(abbreviate-file-name): Use \` rather than ^ for BOS.

2009-10-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-deduce-fileset): Undo previous change, do not tell
	vc-responsible-backend to register, it causes problems.

2009-10-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help-fns.el: Don't require help-mode (to avoid bootstrap issues).

2009-10-21  Eric Ludlam  <zappo@gnu.org>

	* cedet/semantic/bovine/c.el (semantic-c-debug-mode-init)
	(semantic-c-debug-mode-init-pch): New functions.